add get and post to endpoint users/:id
